--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tree-node",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "tree node",
   "main": "index.js",
   "scripts": {
@@ -24,5 +24,9 @@
   "directories": {
     "test": "test"
   },
-  "homepage": "https://github.com/brighthas/tree-node"
+  "homepage": "https://github.com/brighthas/tree-node",
+  "dependencies": {
+    "emitter-component": "~1.1.1"
+  },
+  "devDependencies": {}
 }
