--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tree-node",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "tree node",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/brighthas/tree-node.git"
+    "url": "git://github.com/liangzeng/tree-node.git"
   },
   "keywords": [
     "tree",
@@ -19,12 +19,12 @@
   "author": "brighthas",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/brighthas/tree-node/issues"
+    "url": "https://github.com/liangzeng/tree-node/issues"
   },
   "directories": {
     "test": "test"
   },
-  "homepage": "https://github.com/brighthas/tree-node",
+  "homepage": "https://github.com/liangzeng/tree-node",
   "dependencies": {
     "emitter-component": "~1.1.1"
   },
