Added mocha to npm package and Makefile.  run: npm test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tree node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -28,5 +28,7 @@
   "dependencies": {
     "emitter-component": "~1.1.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "mocha": "*"
+  }
 }
